tests/fixtures/invalid/pow_str_int_int.py
# Cannot call pow() with Str, Int, Int
x = pow("hello", 1, 1)
